Simplify image filename parsing, add corresponding unit test